--- a/example_app/k8s/deployment.yaml
+++ b/example_app/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: fastapi-container
-        image: your-docker-repo/fastapi-prometheus:latest
+        image: kailima/fastapi-app:latest
         ports:
         - containerPort: 8000
-        - containerPort: 8001  # Porta para métricas Prometheus
+        - containerPort: 8001
