--- a/example_app/k8s/deployment.yaml
+++ b/example_app/k8s/deployment.yaml
@@ -18,3 +18,15 @@ spec:
         ports:
         - containerPort: 8000
         - containerPort: 8001
+        livenessProbe:
+          httpGet:
+            path: /healthcheck
+            port: 8000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /healthcheck
+            port: 8000
+          initialDelaySeconds: 10
+          periodSeconds: 5
