--- a/example_app/k8s/service.yaml
+++ b/example_app/k8s/service.yaml
@@ -7,9 +7,11 @@ spec:
   selector:
     app: fastapi-app
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 8000
-    - protocol: TCP
+    - name: metrics
+      protocol: TCP
       port: 8001
       targetPort: 8001
